@@ -2,8 +2,7 @@
  * @test /nodynamiccopyright/
  * @bug 8262891 8272776
  * @summary Check null handling for non-pattern switches.
- * @compile --enable-preview -source ${jdk.version} NullSwitch.java
- * @run main/othervm --enable-preview NullSwitch
+ * @enablePreview
  */
 
 public class NullSwitch {
