@@ -1,3 +1,4 @@
+
 /*
  * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
@@ -30,8 +31,7 @@ import java.util.function.Function;
  * @test
  * @bug 8262891 8268333 8268896 8269802 8269808 8270151 8269113 8277864 8290709
  * @summary Check behavior of pattern switches.
- * @compile --enable-preview -source ${jdk.version} Switches.java
- * @run main/othervm --enable-preview Switches
+ * @enablePreview
  */
 public class Switches {
 
